<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_signal"
        android:icon="@drawable/ic_nav_signal"
        android:title="@string/nav_signal" />
    <item
        android:id="@+id/nav_cells"
        android:icon="@drawable/ic_nav_cells"
        android:title="@string/nav_cells" />
    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_nav_map"
        android:title="@string/nav_map" />
    <item
        android:id="@+id/nav_wifi"
        android:icon="@drawable/ic_nav_wifi"
        android:title="@string/nav_wifi" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings" />
</menu>
